--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
 </head>
 <body>
     <!-- header start -->
-    <header>
-        
+    <header class="">
+        <div class="top-header">
+            <div>
+                <i class="fa-solid fa-lightbulb">Idea</i>
+            </div>
+            <div class="link">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Works</a>
+            </div>
+        <div>
+                <img src="images/icons/profile.png" alt="">
+            </div>
+        </div>
     </header>
     <!-- header end -->
     <main>
